c4prj2_input/grade.txt
Grading at Wed Nov 25 09:31:49 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:21:27: error: ‘cards_t’ undeclared (first use in this function)
   fc->decks[index].cards=(cards_t **)realloc(fc->decks[index].cards,(fc->decks[index].n_cards)*sizeof(card_t *));
                           ^
future.c:21:27: note: each undeclared identifier is reported only once for each function it appears in
future.c:21:37: error: expected expression before ‘)’ token
   fc->decks[index].cards=(cards_t **)realloc(fc->decks[index].cards,(fc->decks[index].n_cards)*sizeof(card_t *));
                                     ^
Compilation of future.c failed

Overall Grade: F
